; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_ipci.c_RequestAddinShmemSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_ipci.c_RequestAddinShmemSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IsUnderPostmaster = common dso_local global i64 0, align 8
@addin_request_allowed = common dso_local global i32 0, align 4
@total_addin_request = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RequestAddinShmemSpace(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @IsUnderPostmaster, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @addin_request_allowed, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %5, %1
  br label %13

9:                                                ; preds = %5
  %10 = load i32, i32* @total_addin_request, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @add_size(i32 %10, i32 %11)
  store i32 %12, i32* @total_addin_request, align 4
  br label %13

13:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @add_size(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
